--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-
 html {
+  overflow: hidden; /*Remove a secondary scrollbar created by the navbar*/
   color: #222;
   font-size: 1em;
   line-height: 1.4;
